Fixed double scrollbar on large screens

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -7,6 +7,7 @@
 html {
   -webkit-font-smoothing: antialiased;
   overflow-y: scroll; /* 1 */
+  min-height: 100%;
   height: 100%;
 }
 
@@ -16,6 +17,7 @@ body {
   line-height: $line-height;
   letter-spacing: $letter-spacing;
   overflow-x: hidden;
+  min-height: 100%;
   height: 100%;
 }
 
